sway: restructured config into multiple files

--- a/config/sway/config
+++ b/config/sway/config
@@ -1,287 +1,11 @@
-#======================= Startup and default programs ========================#
-# Applications to be launched when Sway starts
-
-exec --no-startup-id dropbox start
-exec --no-startup-id nm-applet --indicator
-exec --no-startup-id dunst # Notification daemon
-exec --no-startup-id wlsunset -l 35 -L -107 -t 4000
-
-set $term      kitty
-set $applauncher    $HOME/.config/rofi/scripts/rofi-wrapper.sh drun
-set $scriptlauncher $HOME/.config/rofi/scripts/rofi-wrapper.sh run
-set $windowsearch   $HOME/.config/rofi/scripts/rofi-wrapper.sh windows
-set $optionsmenu    $HOME/.config/rofi/scripts/rofi-wrapper.sh options
-
-# Swaylock branch from swaylock-effects-git in AUR
-set $lock      swaylock
-set $lock-slow swaylock --grace 15 --fade-in 10
-
-exec swayidle \
-    timeout 540 "$lock-slow" \
-    timeout 600 "brightnessct set 0%" \
-        resume "brightnessctl set 10%" \
-    timeout 30 "~/dotfiles/pixelbook/keyboard-backlight.sh set 0" \
-        resume "~/dotfiles/pixelbook/keyboard-backlight.sh set 20"
-
-exec swayidle -w before sleep "$lock"
-
-#=============================================================================#
-
-#================================= Appearance ================================#
-#------------------------------- Colors & font -------------------------------#
-set $font_family Fira Sans
-
-set $nord0  #2E3440
-set $nord1  #3B4252
-set $nord2  #434C5E
-set $nord3  #4C566A
-set $nord4  #D8DEE9
-set $nord5  #E5E9F0
-set $nord6  #ECEFF4
-set $nord7  #8FBCBB
-set $nord8  #88C0D0
-set $nord9  #81A1C1
-set $nord10 #5E81AC
-set $nord11 #BF616A
-set $nord12 #D08770
-set $nord13 #EBCB8B
-set $nord14 #A3BE8C
-set $nord15 #B48EAD
-
-set $background0    $nord0
-set $background1    $nord1
-set $background2    $nord3
-set $text_light     $nord4
-set $text_dark      $nord0
-set $accent         $nord15
-set $urgent         $nord11
-#-----------------------------------------------------------------------------#
-
-#------------------------------ Desktop appearance ---------------------------#
-# Set scaling factor
-output eDP-1 res 2400x1600 scale 1.33333333
-
-# Set walllpaper
-output * bg ~/.config/sway/wallpapers/current/* fill
-
-# Set GTK theme
-set $gnome-schema org.gnome.desktop.interface
-exec_always {
-    gsettings set $gnome-schema gtk-theme Nordic
-    gsettings set $gnome-schema icon-theme Numix-Circle
-    gsettings set $gnome-schema font-name "Fira Sans Semi-Light 11"
-}
-
-# Waybar is used as the status bar instead of the default swaybar
-bar {
-    swaybar_command waybar
-}
-#-----------------------------------------------------------------------------#
-
-#----------------------------- Window appearance -----------------------------#
-# Window colors
-client.background $background # default background color
-
-# bar border    - Border color around title bar (used in tabbed windows)
-# window border - Border color around window
-# text          - Text color for the title bar
-# indicator     - Color of border edge where new window will be created
-
-# class                 bar border    window border  text         indicator
-client.focused          $background0  $accent        $text_dark   $accent
-client.focused_inactive $background0  $background2   $text_light  $background0
-client.unfocused        $background0  $background1   $text_light  $background0
-client.urgent           $background0  $background1   $text_dark   $urgent
-
-# Tiled and floating windows have a titlebar and no border
-default_border normal 0
-default_floating_border normal 0
-
-# Titlebar appearance. Font size controls the size of the bar
-font pango:$font_family Bold 12
-title_align center
-titlebar_padding 12
-titlebar_border_thickness 6
-
-# Workspaces use a tabbed layout by default (works well for small screens)
-workspace_layout tabbed
-
-# Show gaps between open windows
-gaps inner 16
-gaps outer 0
-#-----------------------------------------------------------------------------#
-#=============================================================================#
-
-
-#============================= Controls & input ==============================#
 # Mod4 = super key, Mod1 = Alt
 set $mod Mod4
 
-#--------------------------------- Touchpad ----------------------------------#
-input "type:touchpad" {
-    accel_profile adaptive
-    pointer_accel 0
-    dwt disabled
-}
-
-#------------------------------- Applications --------------------------------#
-# Launch a terminal
-bindsym $mod+Return exec $term
-
-# Bring up launcher
-bindsym $mod+d       exec $applauncher
-bindsym $mod+shift+d exec $scriptlauncher
-
-# Search open windows
-bindsym $mod+grave   exec --no-startup-id $windowsearch
-
-# Pixelbook's hamburger menu button is mapped to XF86Tools
-bindsym XF86Tools      exec $optionsmenu
-bindsym $mod+XF86Tools exec $lock
-
-# /etc/systemd/logind.conf is edited to add HandlePowerKey=ignore so Sway
-# can handle the XF86PowerOff button instead
-bindsym XF86PowerOff   exec $lock
-
-# Volume control
-bindsym XF86AudioRaiseVolume exec pactl -- set-sink-volume 0 +5% 
-bindsym XF86AudioLowerVolume exec pactl -- set-sink-volume 0 -5%
-bindsym XF86AudioMute        exec pactl set-sink-mute 0 toggle
-
-# Backlight control
-bindsym XF86MonBrightnessUp   exec brightnessctl set +10%
-bindsym XF86MonBrightnessDown exec brightnessctl set 10%-
-#-----------------------------------------------------------------------------#
-
-#---------------------------- Workspace navigation ---------------------------#
-# Controls to navigate inside a workspace
-
-# Change focus; both Vim style h,j,k,l and arrow keys work
-bindsym $mod+h      focus left
-bindsym $mod+Left   focus left
-bindsym $mod+j      focus down
-bindsym $mod+Down   focus down
-bindsym $mod+k      focus up
-bindsym $mod+Up     focus up
-bindsym $mod+l      focus right
-bindsym $mod+Right  focus right
-
-# Move focused container; both Vim style h,j,k,l and arrow keys work
-bindsym $mod+Shift+h      move left
-bindsym $mod+Shift+Left   move left
-bindsym $mod+Shift+j      move down
-bindsym $mod+Shift+Down   move down
-bindsym $mod+Shift+k      move up
-bindsym $mod+Shift+Up     move up
-bindsym $mod+Shift+l      move right
-bindsym $mod+Shift+Right  move right
-#-----------------------------------------------------------------------------#
-
-#--------------------------- Container manipulation --------------------------#
-# Controls to manipulate layout, location, and appearance for window containers
-
-# Split focused container horizontally or vertically
-bindsym $mod+b split h
-bindsym $mod+v split v
-
-# Toggle fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
-
-# Change container layout
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
-
-# Focus the parent container which allows manipulating an entire container
-# and all the children at once
-bindsym $mod+a focus parent
-# Return focus to the child container
-bindsym $mod+z focus child
-
-# Toggle tiling/floating for a container
-bindsym $mod+Shift+space floating toggle
-# Change focus between tiling/floating containers
-bindsym $mod+space focus mode_toggle
-# Hold the mod key to drag and resize floating container
-floating_modifier $mod
-
-# Move the currently focused container to the scratchpad which contains
-# floating containers available on all workspaces
-bindsym $mod+shift+minus move scratchpad
-# Show/hide the scratchpad
-bindsym $mod+minus scratchpad show
-
-# Kill focused window
-bindsym $mod+Shift+q kill
-
-# Special mode to resize window (mouse drag also works)
-mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
-        # Grow/shrink the window size using typical vim navigation or arrows
-        bindsym h     resize shrink width  10 px or 10 ppt
-        bindsym Left  resize shrink width  10 px or 10 ppt
-        bindsym j     resize grow   height 10 px or 10 ppt
-        bindsym Down  resize grow   height 10 px or 10 ppt
-        bindsym k     resize shrink height 10 px or 10 ppt
-        bindsym Up    resize shrink height 10 px or 10 ppt
-        bindsym l     resize grow   width  10 px or 10 ppt
-        bindsym Right resize grow   width  10 px or 10 ppt
-
-        # Return to normal mode
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-}
-bindsym $mod+r mode "resize"
-#-----------------------------------------------------------------------------#
-
-#-------------------------------- Workspaces ---------------------------------#
-# Controls to navigate between workspaces
-
-# Special workspaces
-set $steam 11:
-set $music 12:
-
-# Switch to workspace
-bindsym $mod+1 workspace number 1
-bindsym $mod+2 workspace number 2
-bindsym $mod+3 workspace number 3
-bindsym $mod+4 workspace number 4
-bindsym $mod+5 workspace number 5
-bindsym $mod+6 workspace number 6
-bindsym $mod+7 workspace number 7
-bindsym $mod+8 workspace number 8
-bindsym $mod+9 workspace number 9
-bindsym $mod+0 workspace number 10
-bindsym $mod+p workspace $steam
-bindsym $mod+m workspace $music
-
-# Relative workspace motion
-bindsym $mod+Ctrl+l workspace next
-bindsym $mod+Ctrl+h workspace prev
-
-# Move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number 1
-bindsym $mod+Shift+2 move container to workspace number 2
-bindsym $mod+Shift+3 move container to workspace number 3
-bindsym $mod+Shift+4 move container to workspace number 4
-bindsym $mod+Shift+5 move container to workspace number 5
-bindsym $mod+Shift+6 move container to workspace number 6
-bindsym $mod+Shift+7 move container to workspace number 7
-bindsym $mod+Shift+8 move container to workspace number 8
-bindsym $mod+Shift+9 move container to workspace number 9
-bindsym $mod+Shift+0 move container to workspace number 10
-bindsym $mod+Shift+p move container to workspace $steam
-
-# Move to next free workspace
-bindsym $mod+equal exec ~/.config/i3/scripts/next_workspace
-
-# Move focus/window to open workspace on secondary monitor
-bindsym $mod+Tab focus output left
-bindsym $mod+Shift+Tab move container to output left
-
-# The hotkey to move to the current workspace will instead move to the previous
-workspace_auto_back_and_forth yes
-#-----------------------------------------------------------------------------#
+include "config.d/applications"
+include "config.d/appearance"
+include "config.d/window_controls"
+include "config.d/workspaces"
+include "config.d/pixelbook"
 
 #------------------------------ Miscellaneous --------------------------------#
 # Reload the configuration file
@@ -291,20 +15,3 @@ bindsym $mod+Shift+r reload
 bindsym $mod+Shift+e exec "swaynag -t warning -m 'Exit Sway?' \
                                                      -b 'Exit' 'swaymsg exit'"
 #-----------------------------------------------------------------------------#
-#=============================================================================#
-
-
-#============================ Window properties ==============================#
-# Define special properties for certain classes of windows
-
-# Floating mode for dialog windows
-for_window [window_role="pop-up"] floating enable
-for_window [window_role="bubble"] floating enable
-for_window [window_role="task_dialog"] floating enable
-for_window [window_role="Preferences"] floating enable
-for_window [window_type="dialog"] floating enable
-for_window [window_type="menu"] floating enable
-
-for_window [class="feh"] floating enable
-for_window [class="Spotify"] move --no-auto-back-and-forth workspace $music
-#=============================================================================#
