kitty: remove prompt when closing terminal

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,4 +1,5 @@
 allow_remote_control yes
+confirm_os_window_close 0
 
 font_family Fira Code
 font_size 12.0
@@ -30,4 +31,3 @@ color12     #81A1C1
 color13     #B48EAD
 color14     #8FBCBB
 color15     #ECEFF4
-
