--- a/config/sway/config
+++ b/config/sway/config
@@ -26,7 +26,7 @@ include {
     # Workspace settings and controls for manipulating workspaces
     "config.d/workspaces"
 
-    # Hardware specific tweaks for the Google Pixelbook
-    "config.d/pixelbook"
+    # Machine specific settings
+    "config.d/$(cat /etc/hostname)"
 }
 #-----------------------------------------------------------------------------#
