Waybar: Reverted to a static, non-expanding bar
The method used to expand the waybar was too janky (particularly with
multiple monitors) to be worth it. The expanding effect more or less
still works by positioning Rofi to the left of the bar instead of the
right.

--- a/config/waybar/config
+++ b/config/waybar/config
@@ -2,16 +2,21 @@
     "position": "right",
     "width": 60,
     "exclusive": true,
-    "mode": "hide",
+    "mode": "dock",
     "passthrough": false,
 
-    "include": ["~/.config/waybar/modules"],
+    "include": [
+        "~/.config/waybar/modules",
+        "~/.config/waybar/rofi-modules",
+    ],
     "modules-left": [
         "sway/workspaces",
         "sway/mode"
     ],
     "modules-center": [
-        "custom/bar-expand"
+        "custom/rofi-drun",
+        "custom/rofi-windows",
+        "custom/rofi-options",
     ],
     "modules-right": [
         "tray",
